Closed
Bug 513493
Opened 16 years ago
Closed 16 years ago
Adjust Unified Toolbar to Match Snow Leopard
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9.3a1
| Tracking | Status | |
|---|---|---|
| status1.9.2 | --- | beta4-fixed |
People
(Reporter: djspiewak, Assigned: mstange)
Details
Attachments
(7 files, 3 obsolete files)
|
26.39 KB,
image/png
|
Details | |
|
16.70 KB,
image/png
|
Details | |
|
16.67 KB,
image/png
|
Details | |
|
32.95 KB,
image/png
|
Details | |
|
33.42 KB,
image/png
|
Details | |
|
5.14 KB,
patch
|
jaas
:
review+
jaas
:
approval1.9.2+
dveditz
:
approval1.9.1.6-
|
Details | Diff | Splinter Review |
|
3.97 KB,
patch
|
jaas
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en-US; rv:1.9.1.2) Gecko/20090729 Firefox/3.5.2
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en-US; rv:1.9.1.2) Gecko/20090729 Firefox/3.5.2
It seems that in Snow Leopard, Apple has slightly adjusted the gradient coloring for the standard unified toolbar. Specifically, everything is just a shade lighter with a hint of tan. This means that Firefox's unified toolbar looks a bit out of place when compared to Safari and Finder. Screenshots to follow.
In keeping with Firefox's track record of visually catering to the latest version of Mac OS X, I propose that the unified toolbar gradient be adjusted in Firefox.next to match the Snow Leopard standard.
Reproducible: Always
Filed as a bug rather than an RFE as this issue is disruptive of Firefox's visual integration with the Mac platform.
| Reporter | ||
Comment 1•16 years ago
|
||
| Reporter | ||
Comment 2•16 years ago
|
||
| Reporter | ||
Comment 3•16 years ago
|
||
| Assignee | ||
Comment 4•16 years ago
|
||
Could you also upload screenshots of inactive windows, i.e. with the lighter gradient? Specifically, one screenshot of the inactive Firefox preferences window and one of the inactive Safari preferences window would be most useful.
Assignee: nobody → mstange
Status: UNCONFIRMED → ASSIGNED
Component: Theme → Widget: Cocoa
Ever confirmed: true
Product: Firefox → Core
QA Contact: theme → cocoa
Hardware: x86 → All
Version: unspecified → Trunk
| Reporter | ||
Comment 5•16 years ago
|
||
| Reporter | ||
Comment 6•16 years ago
|
||
Requested screenshots now attached
| Reporter | ||
Comment 7•16 years ago
|
||
I need to learn to read. Sorry about the comment spam...
Attachment #397688 -
Attachment is obsolete: true
| Reporter | ||
Comment 8•16 years ago
|
||
Attachment #397686 -
Attachment is obsolete: true
Comment 9•16 years ago
|
||
Hi, I'm wondering when we can have these matched to Snow Leopard ?
1. unified toolbar
2. -moz-chrome-active and -moz-chrome-inactive
3. -moz-mac-focusring
And... will this be fixed in Firefox 3.5.*? I'm afraid when we have Firefox 3.6 and 3.7 will be 1 year later, I guess... because they are still in alpha right now:(
Thank you :)
| Assignee | ||
Comment 10•16 years ago
|
||
Oh, the focus ring colors have changed, too? Interesting.
I'll create a patch soon.
| Assignee | ||
Comment 11•16 years ago
|
||
Attachment #401772 -
Flags: review?(joshmoz)
| Assignee | ||
Comment 12•16 years ago
|
||
Comment on attachment 401772 [details] [diff] [review]
v1
new patch coming
Attachment #401772 -
Attachment is obsolete: true
Attachment #401772 -
Flags: review?(joshmoz)
| Assignee | ||
Comment 13•16 years ago
|
||
Attachment #402018 -
Flags: review?(joshmoz)
Attachment #402018 -
Flags: review?(joshmoz) → review+
| Assignee | ||
Comment 14•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
| Assignee | ||
Updated•16 years ago
|
Attachment #402018 -
Flags: approval1.9.2?
Attachment #402018 -
Flags: approval1.9.1.4?
| Assignee | ||
Updated•16 years ago
|
Attachment #402018 -
Flags: approval1.9.1.4? → approval1.9.1.5?
Comment 15•16 years ago
|
||
This really needs to land on 1.9.2 before we take it on 1.9.1.
Attachment #402018 -
Flags: approval1.9.2? → approval1.9.2+
| Assignee | ||
Comment 16•16 years ago
|
||
status1.9.2:
--- → final-fixed
| Assignee | ||
Comment 17•16 years ago
|
||
Huh, a SunSpider regression on 10.4?
http://graphs.mozilla.org/graph.html#tests=[{%22machine%22:148,%22test%22:25,%22branch%22:10},{%22machine%22:149,%22test%22:25,%22branch%22:10},{%22machine%22:150,%22test%22:25,%22branch%22:10},{%22machine%22:151,%22test%22:25,%22branch%22:10},{%22machine%22:152,%22test%22:25,%22branch%22:10},{%22machine%22:153,%22test%22:25,%22branch%22:10},{%22machine%22:154,%22test%22:25,%22branch%22:10},{%22machine%22:155,%22test%22:25,%22branch%22:10},{%22machine%22:156,%22test%22:25,%22branch%22:10},{%22machine%22:157,%22test%22:25,%22branch%22:10},{%22machine%22:158,%22test%22:25,%22branch%22:10},{%22machine%22:159,%22test%22:25,%22branch%22:10},{%22machine%22:160,%22test%22:25,%22branch%22:10},{%22machine%22:161,%22test%22:25,%22branch%22:10},{%22machine%22:162,%22test%22:25,%22branch%22:10},{%22machine%22:163,%22test%22:25,%22branch%22:10},{%22machine%22:164,%22test%22:25,%22branch%22:10},{%22machine%22:165,%22test%22:25,%22branch%22:10}]&sel=1256324760,1256497560
Backed out of 1.9.2 for now:
http://hg.mozilla.org/releases/mozilla-1.9.2/rev/b2cc08e4e372
http://hg.mozilla.org/releases/mozilla-1.9.2/rev/5f3963040ee2
status1.9.2:
final-fixed → ---
Comment 18•16 years ago
|
||
This really shouldn't be affecting sunspider. How is that test being run?
| Assignee | ||
Comment 19•16 years ago
|
||
Each sunspider test seems to cause redraws of the stop button, the tab title and the status bar. Maybe these redraws fall in the measured time window?
Since this patch makes us check the OS version every time we draw one of the native grey colors, those draw operations might take a tiny bit longer.
| Assignee | ||
Comment 20•16 years ago
|
||
Huh, no, the OS version is cached. Weird.
Comment 21•16 years ago
|
||
> Maybe these redraws fall in the measured time window?
They shouldn't, unless something is really wrong in terms of how the test is measured, imo.
Updated•16 years ago
|
Attachment #402018 -
Flags: approval1.9.1.6? → approval1.9.1.6-
Comment 22•16 years ago
|
||
Comment on attachment 402018 [details] [diff] [review]
v2
Doesn't seem like the kind of fix we have to take on the stable branch. 1.9.1 approval denied.
| Assignee | ||
Comment 23•15 years ago
|
||
Removing the Objective C exception guards in OSXVersion() fixes the regression.
We don't make any Objective C calls in that method, so they shouldn't be necessary.
Attachment #413052 -
Flags: review?(joshmoz)
Attachment #413052 -
Flags: review?(joshmoz) → review+
| Assignee | ||
Comment 24•15 years ago
|
||
status1.9.2:
--- → final-fixed
| Assignee | ||
Comment 25•15 years ago
|
||
(In reply to comment #19)
> Each sunspider test seems to cause redraws of the stop button, the tab title
> and the status bar.
Actually, that's wrong. SunSpider is run in a window where all toolbars and the statusbar and tabbar are hidden.
The only thing that's redrawn is the window's title bar when the title changes.
You need to log in
before you can comment on or make changes to this bug.
Description
•