Bug 513493 - Adjust native theme colors to match Snow Leopard. r=josh