widget/src/cocoa/nsLookAndFeel.mm
@@ -288,8 +288,11 @@ nsresult nsLookAndFeel::NativeGetColor(const nsColorID aID, nscolor &aColor)
     }
       break;
     case eColor__moz_mac_focusring:
-      aColor = [NSColor currentControlTint] == NSGraphiteControlTint ?
-               NS_RGB(0x5F,0x70,0x82) : NS_RGB(0x53,0x90,0xD2);
+      aColor = nsToolkit::OnSnowLeopardOrLater() ?
+                 ([NSColor currentControlTint] == NSGraphiteControlTint ?
+                    NS_RGB(0x6C,0x7E,0x8D) : NS_RGB(0x3F,0x98,0xDD)) :
+                 ([NSColor currentControlTint] == NSGraphiteControlTint ?
+                    NS_RGB(0x5F,0x70,0x82) : NS_RGB(0x53,0x90,0xD2));
       break;
     case eColor__moz_mac_menushadow:
       res = GetMacBrushColor(kThemeBrushBevelActiveDark, aColor, NS_RGB(0x88,0x88,0x88));
