widget/src/cocoa/nsToolkit.h
@@ -48,6 +48,7 @@
 
 #define MAC_OS_X_VERSION_10_4_HEX 0x00001040
 #define MAC_OS_X_VERSION_10_5_HEX 0x00001050
+#define MAC_OS_X_VERSION_10_6_HEX 0x00001060
 
 class nsToolkit : public nsIToolkit
 {
@@ -60,10 +61,11 @@ public:
 
   // Returns the OS X version as returned from Gestalt(gestaltSystemVersion, ...)
   static PRInt32     OSXVersion();
-  
+
   // Convenience functions to check the OS version
   static PRBool      OnLeopardOrLater();
-  
+  static PRBool      OnSnowLeopardOrLater();
+
   static void        PostSleepWakeNotification(const char* aNotification);
 
   static nsresult    SwizzleMethods(Class aClass, SEL orgMethod, SEL posedMethod,
